ci: fix workflow
Signed-off-by: Teresa Romero <teresa@okteto.com>

--- a/.github/workflows/build-global.yaml
+++ b/.github/workflows/build-global.yaml
@@ -1,21 +1,19 @@
-on:
-  push:
-    branches:
-      - master
+on: [push]
+
+name: Build to Global Registry
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: okteto/context@latest
+        with:
+          token: ${{ secrets.OKTETO_TOKEN }}
 
-    - uses: okteto/context@latest
-    with:
-      token: ${{ secrets.OKTETO_TOKEN }}
-
-    - name: Build
-      uses: okteto/build@tere/add-global-flag
-      with:
-        global: true
-      env:
-        OKTETO_GIT_COMMIT: ${{ github.sha }}
-        OKTETO_ENABLE_MANIFEST_V2: true
+      - name: Build
+        uses: okteto/build@tere/add-global-flag
+        with:
+          global: true
+        env:
+          OKTETO_GIT_COMMIT: ${{ github.sha }}
+          OKTETO_ENABLE_MANIFEST_V2: true
