ci: added url to context
Signed-off-by: Teresa Romero <teresa@okteto.com>

--- a/.github/workflows/build-global.yaml
+++ b/.github/workflows/build-global.yaml
@@ -9,6 +9,7 @@ jobs:
       - uses: okteto/context@latest
         with:
           token: ${{ secrets.OKTETO_TOKEN }}
+          url: ${{ secrets.OKTETO_URL }}
 
       - name: Build
         uses: okteto/build@tere/add-global-flag
