--- a/.github/workflows/build-global.yaml
+++ b/.github/workflows/build-global.yaml
@@ -11,6 +11,9 @@ jobs:
           token: ${{ secrets.OKTETO_TOKEN }}
           url: ${{ secrets.OKTETO_URL }}
 
+      - name: checkout
+        uses: actions/checkout@master
+
       - name: Build
         uses: okteto/build@tere/add-global-flag
         with:
