--- a/.github/workflows/build-global.yaml
+++ b/.github/workflows/build-global.yaml
@@ -17,6 +17,7 @@ jobs:
       - name: Build
         uses: okteto/build@tere/add-global-flag
         with:
+          file: okteto.yaml
           global: true
         env:
           OKTETO_GIT_COMMIT: ${{ github.sha }}
