--- a/okteto.yaml
+++ b/okteto.yaml
@@ -4,12 +4,11 @@ build:
 deploy:
   - curl -o gcloud https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-404.0.0-linux-x86_64.tar.gz
   - tar -xf gcloud
-  - ./google-cloud-sdk/install.sh --screen-reader=true
-  - sleep 3600
+  - ./google-cloud-sdk/install.sh --quiet
   - ./google-cloud-sdk/bin/gcloud storage buckets create gs://go-getting-started --project=${PROJECT}
 
 destroy:
   - curl -o gcloud https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-404.0.0-linux-x86_64.tar.gz
   - tar -xf gcloud
-  - ./google-cloud-sdk/install.sh --screen-reader=true
+  - ./google-cloud-sdk/install.sh --quiet
   - ./google-cloud-sdk/bin/gcloud storage rm --recursive gs://go-getting-started
