refactor: fix image
Signed-off-by: Teresa Romero <teresa@okteto.com>

--- a/okteto.yaml
+++ b/okteto.yaml
@@ -2,4 +2,4 @@ build:
   app:
     context: .
 deploy:
-  - helm upgrade --install hello-world chart --set app.image=${build.app.image}
+  - helm upgrade --install hello-world chart --set app.image=${OKTETO_BUILD_APP_IMAGE}
