--- a/okteto.yml
+++ b/okteto.yml
@@ -3,7 +3,7 @@ build:
     context: .
 
 deploy:
-  - curl -v https://test.teresa.dev.okteto.net
+  - curl -v https://kubernetes.teresa.dev.okteto.net
   - kubectl apply -f k8s.yml
 
 dev:
