--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -4,87 +4,87 @@ name: Test okteto actions log-level (default)
 
 jobs:
 
-  previews:
-    runs-on: ubuntu-latest
-    steps:
+  # previews:
+  #   runs-on: ubuntu-latest
+  #   steps:
 
-    - name: checkout
-      uses: actions/checkout@master  
+  #   - name: checkout
+  #     uses: actions/checkout@master  
   
-    - name: "Context"
-      uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
-      with:
-        url: ${{ secrets.OKTETO_URL }}
-        token: ${{ secrets.OKTETO_TOKEN }}
-        log-level: warn
+  #   - name: "Context"
+  #     uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
+  #     with:
+  #       url: ${{ secrets.OKTETO_URL }}
+  #       token: ${{ secrets.OKTETO_TOKEN }}
+  #       log-level: warn
 
-    - name: "Okteto Deploy Preview"
-      uses: okteto/deploy-preview@4d454b837d4c37c89d6729fbaac3c49588ec6611
-      with:
-        name: teresaromero-preview
-        log-level: warn
+  #   - name: "Okteto Deploy Preview"
+  #     uses: okteto/deploy-preview@4d454b837d4c37c89d6729fbaac3c49588ec6611
+  #     with:
+  #       name: teresaromero-preview
+  #       log-level: warn
     
-    - name: "Okteto Destroy Preview"
-      uses: okteto/destroy-preview@5858882307386f173e78c77523513846c8aeefd4
-      with:
-        name: teresaromero-preview
-        log-level: warn
+  #   - name: "Okteto Destroy Preview"
+  #     uses: okteto/destroy-preview@5858882307386f173e78c77523513846c8aeefd4
+  #     with:
+  #       name: teresaromero-preview
+  #       log-level: warn
   
-  namespace:
-    runs-on: ubuntu-latest
-    steps:
+  # namespace:
+  #   runs-on: ubuntu-latest
+  #   steps:
     
-    - name: checkout
-      uses: actions/checkout@master  
+  #   - name: checkout
+  #     uses: actions/checkout@master  
   
-    - name: "Context"
-      uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
-      with:
-        url: ${{ secrets.OKTETO_URL }}
-        token: ${{ secrets.OKTETO_TOKEN }}
+  #   - name: "Context"
+  #     uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
+  #     with:
+  #       url: ${{ secrets.OKTETO_URL }}
+  #       token: ${{ secrets.OKTETO_TOKEN }}
 
-    - name: "Okteto Create Namespace"
-      uses: okteto/create-namespace@1eff4ae01ec3edc55475c63a2013da20b8253533
-      with:
-        namespace: teresaromero-action-ns
-        log-level: warn
+  #   - name: "Okteto Create Namespace"
+  #     uses: okteto/create-namespace@1eff4ae01ec3edc55475c63a2013da20b8253533
+  #     with:
+  #       namespace: teresaromero-action-ns
+  #       log-level: warn
     
-    - name: "Okteto Namespace"
-      uses: okteto/namespace@faefd8be7992db3c56f2f508592a998ac7f1a770
-      with:
-        namespace: teresaromero-teresaromero
-        log-level: warn
+  #   - name: "Okteto Namespace"
+  #     uses: okteto/namespace@faefd8be7992db3c56f2f508592a998ac7f1a770
+  #     with:
+  #       namespace: teresaromero-teresaromero
+  #       log-level: warn
 
-    - name: "Okteto Delete Namespace"
-      uses: okteto/delete-namespace@aa747cff1e1c16e0b4301ce4266cddd04dec31f3
-      with:
-        namespace: teresaromero-action-ns
-        log-level: warn
+  #   - name: "Okteto Delete Namespace"
+  #     uses: okteto/delete-namespace@aa747cff1e1c16e0b4301ce4266cddd04dec31f3
+  #     with:
+  #       namespace: teresaromero-action-ns
+  #       log-level: warn
 
-  pipeline:
-    runs-on: ubuntu-latest
-    steps:
+  # pipeline:
+  #   runs-on: ubuntu-latest
+  #   steps:
 
-    - name: checkout
-      uses: actions/checkout@master  
+  #   - name: checkout
+  #     uses: actions/checkout@master  
   
-    - name: "Context"
-      uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
-      with:
-        url: ${{ secrets.OKTETO_URL }}
-        token: ${{ secrets.OKTETO_TOKEN }}
+  #   - name: "Context"
+  #     uses: okteto/context@641ddbc0d1127d2cd57624aa5d4ed8f248d12c14
+  #     with:
+  #       url: ${{ secrets.OKTETO_URL }}
+  #       token: ${{ secrets.OKTETO_TOKEN }}
     
-    - name: "Okteto Pipeline"
-      uses: okteto/pipeline@91e0e5a36daebcfb8375ed15b03c4898ea42cca1
-      with:
-        name: teresaromero-pipeline
-        log-level: warn
+  #   - name: "Okteto Pipeline"
+  #     uses: okteto/pipeline@91e0e5a36daebcfb8375ed15b03c4898ea42cca1
+  #     with:
+  #       name: teresaromero-pipeline
+  #       log-level: warn
 
-    - name: "Okteto Destroy Pipeline"
-      uses: okteto/destroy-pipeline@9444147b6f51e71ba5e40e9eaf4f325a39251c5f
-      with:
-        name: teresaromero-pipeline
-        log-level: warn
+  #   - name: "Okteto Destroy Pipeline"
+  #     uses: okteto/destroy-pipeline@9444147b6f51e71ba5e40e9eaf4f325a39251c5f
+  #     with:
+  #       name: teresaromero-pipeline
+  #       log-level: warn
 
   other:
     runs-on: ubuntu-latest
@@ -100,12 +100,12 @@ jobs:
         token: ${{ secrets.OKTETO_TOKEN }}
       
     - name: "Okteto Test Action"
-      uses: okteto/test@079953c7f7a9f32a6229fdc2d614d3a2b2bf812a
+      uses: okteto/test@6cdac06f16022a01957f62cb9e652c21ed58ed6a
       with:
         log-level: warn
         
-    - name: "Okteto Build Action"
-      uses: okteto/build@2cc5a4bd48b0d9f70c67e48586fc437395dbd8bd
-      with:
-        tag: okteto.dev/go-getting-started
-        log-level: warn
+    # - name: "Okteto Build Action"
+    #   uses: okteto/build@2cc5a4bd48b0d9f70c67e48586fc437395dbd8bd
+    #   with:
+    #     tag: okteto.dev/go-getting-started
+    #     log-level: warn
